Hot Fix: colors grid wrapping MS Edge issue, firefox fonts styling grid wrapping fix

--- a/popup.css
+++ b/popup.css
@@ -531,8 +531,8 @@ h3 {
 }
 
 .custom-box {
-  width: 100%;
-  margin-left: -5px;
+  margin-left: 26px;
+  max-width: 419px;
   margin-top: -22px;
   margin-bottom: -25px;
   text-align: center;
@@ -606,7 +606,6 @@ h3 {
 }
 .custom-box .box span:before {
   font-size: 1.2em;
-  font-family: FontAwesome;
   display: block;
   opacity: 0;
   transition: all 300ms ease-in-out;
@@ -712,9 +711,9 @@ h3 {
 #change-text-color-switch label,
 #change-title-color-switch label {
   display: inline-block;
-  width: 25px;
-  height: 25px;
-  margin: -1px 4px 0 0;
+  width: 24px;
+  height: 24px;
+  margin: -1px 1px 0 0;
   vertical-align: middle;
   cursor: pointer;
   border-radius: 50%;
